--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<ng-component></ng-component>
-<!-- <app-auth></app-auth> -->
+<main class="main">
+    <ng-component></ng-component>
+</main>
+<app-notification></app-notification>
