--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,10 @@
+
 .header {
     background-color: var(--color-default);
     &__body {
+        max-width: 1367px;
+        margin: 0 auto;
+        padding: 0 35px;
         display: flex;
         height: 120px;
         align-items: center;
@@ -48,8 +52,8 @@
             border: none;
             width: 30px;
             height: 30px;
-            transition: transform .2s ease;
-            &:hover{
+            transition: transform 0.2s ease;
+            &:hover {
                 transform: scale(1.1);
             }
         }
@@ -74,6 +78,47 @@
         &__league {
             grid-area: league;
             max-width: 95.56px;
+        }
+    }
+    @media (max-width: 1100px) {
+        .logo {
+            &__league {
+                display: none;
+            }
+            &__philosophy {
+                display: none;
+            }
+        }
+    }
+    @media (max-width: 900px) {
+        border-radius: 10px 10px 0 0;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        z-index: 20;
+        .header__logos {
+            display: none;
+        }
+        &__controls {
+            margin: 0;
+        }
+        &__body {
+            height: auto;
+            padding: 20px;
+        }
+    }
+
+    @media (max-width: 550px) {
+        &__nav {
+            gap: 20px;
+            &__link{
+                text-align: center;
+            }
+        }
+        &__body {
+            flex-direction: column;
+            justify-content: center;
+            gap: 20px;
         }
     }
 }
