--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,10 +1,21 @@
 <div class="auth">
     <form class="form" [formGroup]="form" (submit)="onSubmitHandler()">
-        <input placeholder="Login" class="form__input" formControlName="login"/>
+        <input
+            placeholder="Login"
+            class="form__input"
+            formControlName="login" />
         <input
             placeholder="Password"
-            class="form__input form__input--password" formControlName="password"/>
-        <a class="form__link">How to create account?</a>
-        <button class="form__button">Log in</button>
+            class="form__input form__input--password"
+            formControlName="password" />
+        <app-spinner
+            class="auth__spinner"
+            *ngIf="spinnerService.loading; else elseBlock"></app-spinner>
+        <ng-template #elseBlock>
+            <div class="form__footer">
+                <a class="form__link">How to create account?</a>
+                <button #elseBlock class="form__button">Log in</button>
+            </div>
+        </ng-template>
     </form>
 </div>
